<resources>    <string name="app_name">Search Movie</string>    <string name="movie_overview">Movie Overview</string>    <string name="release_date">Release Date</string>    <string name="movie_title">Movie Title</string>    <string name="search_movie_title">Search Movie Title</string>    <string name="search">Search</string>    <string name="movie_rating">Movie Rating</string>    <string name="movie_popularity">Movie Popularity</string></resources>