<?xml version="1.0" encoding="utf-8"?><ScrollView    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/scroll"    android:background="@android:color/white"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".views.DetailActivity">    <LinearLayout        android:orientation="vertical"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <FrameLayout            android:layout_width="match_parent"            android:layout_height="wrap_content">            <ImageView                android:id="@+id/backdrop"                tools:srcCompat="@drawable/ic_launcher_foreground"                android:scaleType="fitXY"                android:adjustViewBounds="true"                android:layout_width="match_parent"                android:layout_height="240dp" />            <ImageButton                android:id="@+id/fav"                android:padding="8dp"                android:layout_margin="8dp"                android:gravity="center_vertical"                android:background="@android:color/white"                android:src="@drawable/unfavorite"                android:layout_gravity="bottom|right"                android:layout_width="wrap_content"                android:layout_height="wrap_content" />        </FrameLayout>        <TextView            android:id="@+id/title"            tools:text="@string/movie_title"            android:textStyle="bold"            android:textSize="30sp"            android:layout_margin="8dp"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:text="@string/movie_rating"            android:textStyle="bold"            android:layout_margin="8dp"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:id="@+id/rating"            android:layout_margin="8dp"            tools:text="@string/movie_rating"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:text="@string/movie_popularity"            android:textStyle="bold"            android:layout_margin="8dp"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:id="@+id/popularity"            android:layout_margin="8dp"            tools:text="@string/movie_popularity"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:text="@string/release_date"            android:textStyle="bold"            android:layout_margin="8dp"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:id="@+id/release"            android:layout_margin="8dp"            tools:text="@string/release_date"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:layout_margin="8dp"            android:text="@string/movie_overview"            android:textStyle="bold"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:id="@+id/overview"            tools:text="@string/movie_overview"            android:layout_margin="8dp"            android:layout_width="match_parent"            android:layout_height="wrap_content" />    </LinearLayout></ScrollView>